2000-08-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-identifiers.c: added simple list of all identifiers.

	* tools/dump-cm.c: minor changes by Andreas.

2000-07-17  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.5.tar.gz: released version 0.2.5.

	* configure.in (LIBTOOL_VERSION): added checks for additional
	Sun compiler flag (others may follow) to make the flex generated
	scanner happy about prototypes.

	* lib/smi.h.in: many compilers are unhappy with empty structures
	(not only MS VC++).

	* lib/scanner-smi.h: moved YY_DECLs from scanner-*.h to scanner-*.l.
	
2000-07-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* win/Makefile.mingw: Updated to reflect check.c and dump-metrics.c.

2000-07-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: simplified output by moving some code to
	the static parent class of the JAX package. Some code cleanups.

2000-07-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed line numbers of object, type, and
	macro definitions to be the first line of the defining SMI
	statement.

	* lib/check.c: Bill Fenner contributed a patch that fixes
	the location of complained identifiers if they are imported.

2000-06-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.4.tar.gz: released version 0.2.4.

	* lib/smi.h.in: added more library version information.

	* tools/dump-jax.c (dumpEntry): added entry get methods for
	index elements. Thanks to Sven.

	* mibs/ietf/IF-MIB: updated (RFC 2863).

	* mibs/ietf/IF-INVERTED-STACK-MIB: added (RFC 2864).

2000-06-21  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/HCNUM-TC: added (RFC 2856).

	* tools/dump-xmp.c: Juergen updated the XML dump format.

	* lib/scanner-smi.l: Fixed scanning of module files ending
	without a newline.

	* win/: Juergen changed some win things.

2000-06-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/RFC-1212: fixed recursive import.
